modification tablette + correction mineure

--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ html
 section 
 {
     display: block;
-    justify-content: center;
-    align-content: center;
+
 }
 img 
 {
@@ -22,10 +21,7 @@ a
     text-decoration: none;
     color: black;
 }
-div 
-{
-    display: block;
-}
+
 h3
 {
     font-size: 13px ;
@@ -43,14 +39,11 @@ p
     width: 1350px;
     margin: auto;
 }
-#menu
-{
-    display: inline;
-    width: auto;
-}
+
 .inscription
 {
     margin-top: 15px;
+    
 }
 /*header*/
 header {
@@ -73,7 +66,7 @@ nav ul {
     margin-right: 5px;
 }
 nav li {
-    margin-right: 15px;
+    margin-right: 60px;
 }
 nav a {
     font-size: 1.0em;
@@ -120,6 +113,10 @@ nav a:hover {
     color: white;
 }
 /* filtres*/
+.titre_filtres
+{
+    margin-top: 50px;
+}
 .blocfiltre {
     display: flex;
     padding: 15px;
@@ -138,8 +135,7 @@ nav a:hover {
 }
 .icone {
     display: flex;
-    padding: 0px 0px 0px 0px;
-    margin: 10px -45px 0px 0px;
+    margin: 7px -50px 0px 0px;
     align-content: center;
     text-align: center;
     border-radius: 50px;
@@ -147,8 +143,9 @@ nav a:hover {
 }
 .boxfiltres {
     display: flex;
-    margin: 30px 10px 30px 10px;
+    margin: 20px 10px 30px 10px;
     padding-left: 30px;
+    flex-wrap: wrap;
 }
 .fas.fa-money-bill-wave,.fas.fa-child,.fas.fa-heart,.fas.fa-dog {
     display: inline;
@@ -158,16 +155,17 @@ nav a:hover {
     border-radius: 50%;
     width: 43px;
     height: 30px;
-    padding-top: 12px;
+    padding-top: 14px;
     padding-left: 2px;
     padding-right: 2px;
     padding-bottom: 7px;
     margin-top: -7px;
+
 }
 .icone {
     transform: scale(1);
     transition: 400ms;
-    margin-left: 15px;
+    margin-left: 10px;
 }
 .titre_filtre:hover {
     transform: scale(1.08);
@@ -212,13 +210,11 @@ nav a:hover {
 .hebergt {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    box-shadow: 15px black;
-    padding: 0px 0px 0px 0px;
+    gap: 30px;
+    margin: 10px;
 }
 .logo_hot {
     object-fit: cover;
-    box-shadow: 15px black;
     border-radius: 10px 10px 0px 0px;
     height: 120px;
     margin: 2px;
@@ -226,28 +222,21 @@ nav a:hover {
     padding: 5px;
 }
 .lienhotel {
-    display: block;
     background-color: white;
-    align-content: center;
-    justify-content: center;
     border-radius: 15px;
-    margin-bottom: 20px;
+    
 }
 .conteneur_1 {
-    display: block;
     background-color: #f2f2f2;
     flex-direction: column;
     margin-top: 5px;
-    margin-right: 0px;
-    padding: 15px;
-    max-width: 800px;
-    border-radius: 20px;
-    align-content: center;
-    justify-content: center;   
+    margin-right: 50px;
+    padding: 15px 15px 0 15px;
+    border-radius: 20px; 
+    flex-wrap: wrap; 
 }
 .nomhotel {
     margin: 10px 10px 10px 10px;
-    padding: bottom 10px;
     font-size: 20px;
 }
 .nomhbgt {
@@ -257,13 +246,13 @@ nav a:hover {
     margin-left: 5px;
 }
 .tarif {
-    font-size: 10px arial;
+    font-size: 10px;
     padding: 5px;
     margin: 0px;
     margin-left: 5px;
 }
 .etoiles {
-    font-size: 10px arial;
+    font-size: 15px;
     padding: 5px;
     margin: 0px;
     margin-left: 5px;
@@ -278,10 +267,6 @@ nav a:hover {
     font-size: 20px;
     margin-left: 5px;
 }
-.hebergement_cote
-{
-    max-width: 100%;
-}
 /* les+populaires*/
 .titre_les_plus-populaires
 {
@@ -295,10 +280,8 @@ nav a:hover {
     flex-direction: column;
     border-radius: 16px;
     background-color: #F2F2F2;
-    max-width: 800px;
-    justify-content: center;
-    align-content: center;
-    padding: 0 25px 25px 25px; 
+    min-width: 400px;
+    padding: 10px 10px 0px 20px; 
 }
 .descriphotelpop {
     flex-direction: column; 
@@ -334,11 +317,10 @@ nav a:hover {
     display: flex;
     border-radius: 15px;
     border: solid white 5px;
-    max-width: 768px;
+    max-width: 320px;
     margin-bottom: 40px;
     height: 110px;
     background-color: white;
-    flex-wrap: nowrap;
 }
 /*Activités */
 #conteneur_3 {
@@ -358,7 +340,6 @@ nav a:hover {
 .activ_1 {  
     display: flex;
     flex-direction: column;
-    max-width: 760px
 }
 .activ_2
 {
@@ -385,32 +366,23 @@ nav a:hover {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    max-width: 760px
 }
-.activ_4
-{
-  max-width: 760px;
-}
+
 .hori_marseille_1 {
-    display: block;
     border-radius: 20px;
     box-shadow: 5px 5px 5px 5px #F2F2F2;
     margin-bottom: 20px;
     font-size: 13px;
     height: 250px;
-    transition: 400ms;
 }
 .hori_marseille_2 {
-    display: block;
     border-radius: 20px;
     box-shadow: 5px 5px 5px 5px #F2F2F2;
     margin-bottom: 0px;
     height: 175px;
     font-size: 13px;
-    transition: 400ms;
 }
 .verti_marseille_3 {
-    display: block;
     border-radius: 20px;
     box-shadow: 5px 5px 5px 5px #F2F2F2;
     margin-bottom: 0px;
@@ -424,9 +396,7 @@ nav a:hover {
     border-radius: 20px;
     margin-bottom: 20px;
     flex-direction: column;
-    justify-content: space-between;
     font-size: 13px;
-    transition: 600ms;
 }
 .hori_marseille_5 {
     background-color: white;
@@ -436,7 +406,6 @@ nav a:hover {
     border-radius: 20px;
     font-size: 13px;
     height: 175px;
-    justify-content: space-between; 
 }
 .horizontal_1 {
     width:350px;
